spade-tests/src/snapshots/spade_tests__ports_integration__transitive_backward_type_can_not_be_put_in_registers.snap
---
source: spade-tests/src/ports_integration.rs
---
struct port X {
    a: &mut bool,
    b: &bool
}
entity x(clk: clk, a: X) -> bool {
    reg(clk) _ = a;
    true
}


error: Ports can not be put in a register
  ┌─ testinput:6:18
  │
6 │     reg(clk) _ = a;
  │                  ^ This is a port
  │
  = struct X {a: &mut bool, b: &bool} is a port


